projects.css
#snap-store {
    max-width: 100%;
    border-radius: 5px;
}

button.close{
    color: white;
}

.project-card{
    color: white;
    background-color: #009688;
}

.project-card a{
    color: #6200ee
}

.project-card i{
    color: white
}

.project-card .project-card-img-top{
    width:100%
}

.project-card .project-card-content{
    height: 160px;
}

.project-card .project-card-action{
    padding: 20px;
    border-top: 1px solid rgba(160, 160, 160, 0.2);
}

.project-card .project-card-title{
    margin-bottom: .75rem;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 5px;
}

.project-card .project-card-text{
    margin-bottom: 0;
    padding-left: 5px;
}

.project-card .project-card-action a{
    font-size: 15px;
    color: #ffab40;
    text-transform:uppercase;
    margin-right: 20px;    
    -webkit-transition: color 0.3s ease;
    -moz-transition: color 0.3s ease;
    -o-transition: color 0.3s ease;
    -ms-transition: color 0.3s ease;
    transition: color 0.3s ease;
}
.project-card .project-card-action a:hover{    
    color:#ffd8a6;
    text-decoration:none;
}

.project-card .project-card-reveal{    
    padding: 20px;
    position: absolute;
    width: 100%;
    overflow-y: auto;
    left:0;
    bottom:0;
    height: 0;
    z-index: 1;
    background-color: #009688;
    display: block;
    visibility: hidden;
}

.project-card .project-card-reveal.pop-out {
    visibility: hidden;
    height: 0;
    -webkit-transition: height .9s ease, visibility .6s;
    transition: height .9s ease, visibility .6s;
}

.project-card .project-card-reveal.pop-up {
    visibility: visible;
    height: 100%;
    -webkit-transition: height .9s ease, visibility .9s;
    transition: height .9s ease, visibility .9s;
}

.project-card .project-card-reveal .project-card-title {
    margin: 20px;
}

.project-card .project-card-reveal p{
    margin:20px ;
}

